--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "employee.js",
-"scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-  "all": "concurrently \"npm run dev\" \"cd ../frontend && npm start\""
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "all": "concurrently \"npm run dev\" \"cd ../frontend && npm start\""
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,36 @@
   "type": "commonjs",
   "devDependencies": {
     "concurrently": "^9.2.0"
+  },
+  "dependencies": {
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "bcryptjs": "^3.0.2",
+    "chalk": "^4.1.2",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "cors": "^2.8.5",
+    "emoji-regex": "^8.0.0",
+    "escalade": "^3.2.0",
+    "express": "^5.1.0",
+    "get-caller-file": "^2.0.5",
+    "has-flag": "^4.0.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.17.1",
+    "require-directory": "^2.1.1",
+    "rxjs": "^7.8.2",
+    "shell-quote": "^1.8.3",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "supports-color": "^8.1.1",
+    "tree-kill": "^1.2.2",
+    "tslib": "^2.8.1",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1"
   }
 }
